[CHANGE] Lockpick being able to hit other things than doors
[CHANGE] HasPriv() speed by using a cache: THANKS PHILXYZ
[CHANGE] SpreadFire code: THANKS PHILXYZ
[CHANGE] The way movement is done
[CHANGE] The druglab completely! I hope you like it!
[CHANGE] Put the warrant back.
[FIX] When use protection is on, doors couldn't be opened by some people, now they can.
[FIX] Rare error with dropweapon
[FIX] Exploit with shipments: Exploding them with more than one explosive would make them spawn more guns than usual.
[FIX] Exploit with wire nailer
[FIX] Exploit that you can duplicate weapons(I made sure that you can't use toolgun on weapons AND I made sure you can't spawn saved weapons works on both normal dup and adv. dup)
[FIX] Bug that even if hungermod was off, food would still cost money.
[FIX] Gravgun punt punting far
[FIX] Not being able to use druglabs/money printers/whatever
[FIX] Vote screens being able to be there forever
[FIX] The save system not saving everything
[FIX] When looking at an item/door, the text won't be shaky anymore!
[FIX] Attempt to fix playerinitialspawn lag
[FIX] Attempt to fix walk speed lag
[FIX] /dropmoney text exploit
[FIX] The vote system was fucked, I completely renewed it(I now use Derma) and HOPEFULLY every shit problem you guys had with it is fixed!
[FIX] Prices etc. resetting to 0 (TO MAKE THIS HAVE EFFECT, REMOVE THE GLOBALS.txt FROM DATA/DARKRP ON THE SERVER!) 
[REMOVE] Data/DarkRP/WHAT_YOU_CAN_DO_IN_THIS_FOLDER.txt and its contents, it had absolutely no purpose. If you have that file, the update won't remove it but it won't remake it either.


VERSION 2.3.1
Updated by: FPtje Falco

[ADD by FPtje] Awesome change job screen, Press F4 while not looking at a door
[ADD by FPtje] Player possessor swep for the admins
[ADD by FPtje] Sleep sound
[ADD by FPtje] New team! Hobo
[ADD by FPtje] Cops can warrant through TAB scoreboard :D
[ADD by FPtje] The battering ram can unfreeze props of warranted players!