@@ -27,6 +27,7 @@ Updated by: FPtje Falco
 [CHANGE] The way movement is done
 [CHANGE] The druglab completely! I hope you like it!
 [CHANGE] Put the warrant back.
+[CHANGE] Scoreboard now sorts the players on their class
 [FIX] When use protection is on, doors couldn't be opened by some people, now they can.
 [FIX] Rare error with dropweapon
 [FIX] Exploit with shipments: Exploding them with more than one explosive would make them spawn more guns than usual.
